# ComfyUI-Logic-nodes

./: README.md  pyproject.toml
locales/en/: main.json  nodeDefs.json
locales/zh-CN/: main.json
locales/zh-Hans/: nodeDefs.json
nodes/: __init__.py  batch_combiner.py  blocker.py  converter.py  judge.py  looper.py  math_expression.py  preview.py  preview_any.py  random_tool.py  switch.py  switcher.py  video_compose.py  video_decompose.py
web/js/: batch_combiner_visual.js  blocker_visual.js  converter_visual.js  judge_visual.js  looper_visual.js  math_visual.js  preview_any_visual.js  preview_visual.js  random_visual.js  switch_visual.js  switcher_visual.js  tr.js  translations.js  video_compose_visual.js  video_decompose_visual.js
