[project]
name = "comfyui-logic-nodes"
description = "ComfyUI logic utility nodes - workflow control, conditional logic, universal preview, batch processing and more."
version = "1.2.0"
license = { text = "MIT License" }

[project.urls]
Repository = "https://github.com/playboy-dongan/comfyui-logic-nodes"

[tool.comfy]
PublisherId = "playboy"
DisplayName = "ComfyUI-Logic"
